--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment 1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPXoQ63ADFONR2TbyX3/bcE",
+      "authorship_tag": "ABX9TyPfxTaToVI7ly0U0em3lfF9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,29 +27,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rD8PSUS2KdE6",
-        "outputId": "1dc6f78d-137f-4f41-ebf8-0ecaa8842028"
+        "id": "rD8PSUS2KdE6"
       },
       "source": [
-        "!git add -A\r\n",
-        "!git commit -m \"Commit 0\"\r\n",
-        "!git push -u origin master"
+        "import pandas as pd\r\n",
+        "import numpy as np"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "fatal: not a git repository (or any of the parent directories): .git\n",
-            "fatal: not a git repository (or any of the parent directories): .git\n",
-            "fatal: not a git repository (or any of the parent directories): .git\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
