--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment 1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPQ2g0FhG1w5XMBcizBqJh/",
+      "authorship_tag": "ABX9TyONhjl1PA+DtzCudaR3Z15b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07ea7669-2e91-43f0-db68-2427333ca693"
+        "outputId": "618ebc6d-03a6-437a-c585-a1932a6ce403"
       },
       "source": [
         "#Import the required libraries\r\n",
@@ -43,34 +43,59 @@
         "from keras.datasets import fashion_mnist\r\n",
         "from matplotlib import pyplot"
       ],
-      "execution_count": 30,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: wandb in /usr/local/lib/python3.7/dist-packages (0.10.21)\n",
-            "Requirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.12.4)\n",
-            "Requirement already satisfied: Click>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (7.1.2)\n",
-            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from wandb) (3.13)\n",
-            "Requirement already satisfied: sentry-sdk>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.0.0)\n",
-            "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.23.0)\n",
-            "Requirement already satisfied: configparser>=3.8.1 in /usr/local/lib/python3.7/dist-packages (from wandb) (5.0.2)\n",
-            "Requirement already satisfied: GitPython>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.1.14)\n",
-            "Requirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.15.0)\n",
-            "Requirement already satisfied: docker-pycreds>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (0.4.0)\n",
-            "Requirement already satisfied: subprocess32>=3.5.3 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.5.4)\n",
-            "Requirement already satisfied: pathtools in /usr/local/lib/python3.7/dist-packages (from wandb) (0.1.2)\n",
+            "Collecting wandb\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/00/17/b1e27f77c3d47f6915a774ecf632e3f5a7d49d9fa3991547729e7f19bedd/wandb-0.10.21-py2.py3-none-any.whl (2.0MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.0MB 7.5MB/s \n",
+            "\u001b[?25hRequirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.8.1)\n",
             "Requirement already satisfied: psutil>=5.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (5.4.8)\n",
-            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.8.1)\n",
+            "Collecting GitPython>=1.0.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a6/99/98019716955ba243657daedd1de8f3a88ca1f5b75057c38e959db22fb87b/GitPython-3.1.14-py3-none-any.whl (159kB)\n",
+            "\u001b[K     |████████████████████████████████| 163kB 34.6MB/s \n",
+            "\u001b[?25hRequirement already satisfied: six>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.15.0)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from wandb) (3.13)\n",
             "Requirement already satisfied: promise<3,>=2.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.3)\n",
-            "Requirement already satisfied: shortuuid>=0.5.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (1.0.1)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.12.0->wandb) (54.0.0)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from sentry-sdk>=0.4.0->wandb) (2020.12.5)\n",
-            "Requirement already satisfied: urllib3>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from sentry-sdk>=0.4.0->wandb) (1.24.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2.10)\n",
+            "Collecting subprocess32>=3.5.3\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/32/c8/564be4d12629b912ea431f1a50eb8b3b9d00f1a0b1ceff17f266be190007/subprocess32-3.5.4.tar.gz (97kB)\n",
+            "\u001b[K     |████████████████████████████████| 102kB 11.8MB/s \n",
+            "\u001b[?25hCollecting configparser>=3.8.1\n",
+            "  Downloading https://files.pythonhosted.org/packages/fd/01/ff260a18caaf4457eb028c96eeb405c4a230ca06c8ec9c1379f813caa52e/configparser-5.0.2-py3-none-any.whl\n",
+            "Requirement already satisfied: requests<3,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (2.23.0)\n",
+            "Requirement already satisfied: Click>=7.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (7.1.2)\n",
+            "Requirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from wandb) (3.12.4)\n",
+            "Collecting shortuuid>=0.5.0\n",
+            "  Downloading https://files.pythonhosted.org/packages/25/a6/2ecc1daa6a304e7f1b216f0896b26156b78e7c38e1211e9b798b4716c53d/shortuuid-1.0.1-py3-none-any.whl\n",
+            "Collecting docker-pycreds>=0.4.0\n",
+            "  Downloading https://files.pythonhosted.org/packages/f5/e8/f6bd1eee09314e7e6dee49cbe2c5e22314ccdb38db16c9fc72d2fa80d054/docker_pycreds-0.4.0-py2.py3-none-any.whl\n",
+            "Collecting pathtools\n",
+            "  Downloading https://files.pythonhosted.org/packages/e7/7f/470d6fcdf23f9f3518f6b0b76be9df16dcc8630ad409947f8be2eb0ed13a/pathtools-0.1.2.tar.gz\n",
+            "Collecting sentry-sdk>=0.4.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f3/92/5a33be64990ba815364a8f2dd9e6f51de60d23dfddafb4f1fc5577d4dc64/sentry_sdk-1.0.0-py2.py3-none-any.whl (131kB)\n",
+            "\u001b[K     |████████████████████████████████| 133kB 34.0MB/s \n",
+            "\u001b[?25hCollecting gitdb<5,>=4.0.1\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/48/11/d1800bca0a3bae820b84b7d813ad1eff15a48a64caea9c823fc8c1b119e8/gitdb-4.0.5-py3-none-any.whl (63kB)\n",
+            "\u001b[K     |████████████████████████████████| 71kB 10.7MB/s \n",
+            "\u001b[?25hRequirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2.10)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (3.0.4)\n",
-            "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.7/dist-packages (from GitPython>=1.0.0->wandb) (4.0.5)\n",
-            "Requirement already satisfied: smmap<4,>=3.0.1 in /usr/local/lib/python3.7/dist-packages (from gitdb<5,>=4.0.1->GitPython>=1.0.0->wandb) (3.0.5)\n"
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3,>=2.0.0->wandb) (2020.12.5)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.12.0->wandb) (54.0.0)\n",
+            "Collecting smmap<4,>=3.0.1\n",
+            "  Downloading https://files.pythonhosted.org/packages/d5/1e/6130925131f639b2acde0f7f18b73e33ce082ff2d90783c436b52040af5a/smmap-3.0.5-py2.py3-none-any.whl\n",
+            "Building wheels for collected packages: subprocess32, pathtools\n",
+            "  Building wheel for subprocess32 (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for subprocess32: filename=subprocess32-3.5.4-cp37-none-any.whl size=6489 sha256=1450e9cad1793eac478ee56f46b00d5ff844c1b156010f6c537262b03d9724a2\n",
+            "  Stored in directory: /root/.cache/pip/wheels/68/39/1a/5e402bdfdf004af1786c8b853fd92f8c4a04f22aad179654d1\n",
+            "  Building wheel for pathtools (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pathtools: filename=pathtools-0.1.2-cp37-none-any.whl size=8786 sha256=7b49831ed6b5d4e5604fc15bb5b0d599da03e5a72d11a8607956299d9da44838\n",
+            "  Stored in directory: /root/.cache/pip/wheels/0b/04/79/c3b0c3a0266a3cb4376da31e5bfe8bba0c489246968a68e843\n",
+            "Successfully built subprocess32 pathtools\n",
+            "Installing collected packages: smmap, gitdb, GitPython, subprocess32, configparser, shortuuid, docker-pycreds, pathtools, sentry-sdk, wandb\n",
+            "Successfully installed GitPython-3.1.14 configparser-5.0.2 docker-pycreds-0.4.0 gitdb-4.0.5 pathtools-0.1.2 sentry-sdk-1.0.0 shortuuid-1.0.1 smmap-3.0.5 subprocess32-3.5.4 wandb-0.10.21\n"
           ],
           "name": "stdout"
         }
@@ -79,15 +104,70 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pzGaDyY9ZiWU"
+        "id": "pzGaDyY9ZiWU",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 610
+        },
+        "outputId": "dc1a2ba4-3057-4f6d-e79d-2b8e4cdc1c38"
       },
       "source": [
         "#Set-up the wandb project\r\n",
         "!wandb login 265e39ac78ea7a5514c16f131116c52112adddd6\r\n",
         "wandb.init(project=\"cs6910-assignment1\", entity=\"nvvishnu\")\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mnvvishnu\u001b[0m (use `wandb login --relogin` to force relogin)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "\n",
+              "                Tracking run with wandb version 0.10.21<br/>\n",
+              "                Syncing run <strong style=\"color:#cdcd00\">toasty-wind-3</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+              "                Project page: <a href=\"https://wandb.ai/nvvishnu/cs6910-assignment1\" target=\"_blank\">https://wandb.ai/nvvishnu/cs6910-assignment1</a><br/>\n",
+              "                Run page: <a href=\"https://wandb.ai/nvvishnu/cs6910-assignment1/runs/1ehao7ui\" target=\"_blank\">https://wandb.ai/nvvishnu/cs6910-assignment1/runs/1ehao7ui</a><br/>\n",
+              "                Run data is saved locally in <code>/content/wandb/run-20210309_154142-1ehao7ui</code><br/><br/>\n",
+              "            "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<wandb.sdk.wandb_run.Run at 0x7f059426e610>"
+            ],
+            "text/html": [
+              "<h1>Run(1ehao7ui)</h1><iframe src=\"https://wandb.ai/nvvishnu/cs6910-assignment1/runs/1ehao7ui\" style=\"border:none;width:100%;height:400px\"></iframe>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -96,13 +176,13 @@
       },
       "source": [
         "(trainX, trainy), (testX, testy) = fashion_mnist.load_data()\r\n",
-        "#num_classes = max(max(trainy),max(testy))\r\n",
+        "num_classes = max(max(trainy),max(testy))\r\n",
         "#print(num_classes) \r\n",
         "# To identify the number of classes in the dataset - There are 10 labels in the dataset\r\n",
         "labelNames = ['T-shirt/top', 'Trouser','Pullover','Dress','Coat','Sandal','Shirt','Sneaker','Bag','Ankle boot']\r\n",
         "# The names of label of the Fashion MNIST Dataset as per Kaggle: https://www.kaggle.com/zalando-research/fashionmnist"
       ],
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -113,10 +193,10 @@
           "height": 1000
         },
         "id": "Hv01sOhUU3jE",
-        "outputId": "3d75101b-26cd-4b35-b376-1b0b4502ced5"
+        "outputId": "16786b5e-b310-4b87-c02d-bed3a74e2510"
       },
       "source": [
-        "images=np.array()\r\n",
+        "images=dict()\r\n",
         "for i in range(0,num_classes+1):\r\n",
         "  for j in range(0,trainX.shape[0]):\r\n",
         "    if(trainy[j]==i):\r\n",
@@ -130,7 +210,7 @@
         "      break\r\n",
         "## This creates "
       ],
-      "execution_count": 26,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -267,33 +347,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 306
-        },
-        "id": "NRRc572gZADV",
-        "outputId": "e4539b82-c20c-483b-f92b-22f3ef10fe50"
+        "id": "NRRc572gZADV"
       },
       "source": [
         "#Yet to implement how to log this into wandb\r\n",
         "#wandb.log({\"Question 1:\", [wandb.Image(images, caption=labelNames)]})"
       ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-34-819374a138a9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwandb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"Question 1:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mwandb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mImage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcaption\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlabelNames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/wandb/sdk/data_types.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_or_path, mode, caption, grouping, classes, boxes, masks)\u001b[0m\n\u001b[1;32m   1517\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_initialize_from_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_or_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1518\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1519\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_initialize_from_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_or_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1520\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1521\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_initialization_meta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrouping\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcaption\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mboxes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmasks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/wandb/sdk/data_types.py\u001b[0m in \u001b[0;36m_initialize_from_data\u001b[0;34m(self, data, mode)\u001b[0m\n\u001b[1;32m   1621\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"numpy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# TF data eager tensors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1622\u001b[0m                 \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1623\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1624\u001b[0m                 \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# get rid of trivial dimensions as a convenience\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1625\u001b[0m             self._image = pil_image.fromarray(\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'ndim'"
-          ]
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -304,7 +365,32 @@
         "def feed_forward(X,num_hidden_layers,num_neurons_hl,activation_function,weights,biases):\r\n",
         "  print('dum')\r\n"
       ],
-      "execution_count": 36,
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bgYMQKI0oMDz"
+      },
+      "source": [
+        "def logistic(z):\r\n",
+        "  return 1./(1+exp(-z))\r\n",
+        "def tanh(z):\r\n",
+        "  return np.divide(exp(z)-exp(-z),(e(z)+e(-z)))\r\n",
+        "def log_grad(z):\r\n",
+        "  return np.divide(logistic(z)(1-logistic(z)))\r\n",
+        "def log_tanh(z):\r\n",
+        "  return 1.-(tanh(z))*(tanh(z))\r\n",
+        "def grad_output(l,y):\r\n",
+        "  n=y.size()[0]\r\n",
+        "  e=np.zeroes(n)\r\n",
+        "  for i in range(0,n):\r\n",
+        "    if(l==(i+1)):\r\n",
+        "      e[i]=1\r\n",
+        "  return -(e-y)"
+      ],
+      "execution_count": 15,
       "outputs": []
     }
   ]
