--- a/Assignement1.ipynb
+++ b/Assignement1.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignement1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOiipoiNXnzKRWbnYzwkrAq",
+      "authorship_tag": "ABX9TyNq+BYG2RZ7ylR6rD2Gecmt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -324,16 +324,16 @@
         "    \r\n",
         "    \r\n",
         "    #do the weights Initialisation here based on weight_initialisation,num_hidden_layers,sz_each_hidden_layer\r\n",
-        "    \r\n",
+        "\r\n",
         "\r\n",
         "    if(optimizer == 'sgd'):\r\n",
         "       return sgd(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
         "      \r\n",
-        "    if(optimizer == 'mbgd'): # short form for momentum based gradient descent\r\n",
-        "       return mbgd(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
+        "    if(optimizer == 'momentum'): \r\n",
+        "       return momentum(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
         "\r\n",
-        "    if(optimizer == 'nagd'): #short form for nestrov accelerated gradient descent\r\n",
-        "       return nagd(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
+        "    if(optimizer == 'nesterov'): \r\n",
+        "       return nesterov(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
         "\r\n",
         "    if(optimizer == 'rmsprop'):\r\n",
         "       return rmsprop(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
