updated gradient function

--- a/Assignement1.ipynb
+++ b/Assignement1.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignement1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNq+BYG2RZ7ylR6rD2Gecmt",
+      "authorship_tag": "ABX9TyP6F6Pc1sEwdZ3ANlt2wW6A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -310,12 +310,15 @@
         "    delta_B.append(A)\r\n",
         "    l = l-1\r\n",
         "    while(l >= 1):\r\n",
+        "      \r\n",
         "       H = np.matmul(weights[l+1].T,A)\r\n",
         "       A = H*(act_fn_derivative(a[l]))     # assuming a is 1 based index \r\n",
         "       delta_W.append(np.matmul(A,h[l-1].T))\r\n",
         "       delta_B.append(A)\r\n",
         "       l = l-1\r\n",
         "\r\n",
+        "    delta_W.reverse()\r\n",
+        "    delta_B.reverse()\r\n",
         "    return [delta_W,delta_B]\r\n",
         "\r\n",
         "\r\n",
