--- a/Assignement1.ipynb
+++ b/Assignement1.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignement1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP6F6Pc1sEwdZ3ANlt2wW6A",
+      "authorship_tag": "ABX9TyPwHJsFIIDL4/WLSuqrdHDC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -258,12 +258,11 @@
         "       return (1.0/len(arr))*(np.ones(shape=(len(arr),1),dtype=float))\r\n",
         "\r\n",
         "\r\n",
-        "def feed_forward(X,num_hidden_layers,num_neurons_hl,activation_function,weights,biases,output_function=softmax):\r\n",
+        "def feed_forward(X,activation_function,weights,biases,output_function=softmax):\r\n",
         "\r\n",
         "    X = X.flatten()\r\n",
-        "\r\n",
+        "    num_hidden_layers = len(biases)\r\n",
         "    # X is the input (x1,x2,...,xn)\r\n",
-        "    # num_neurons_hl is the list of number of neurons in each layer , excluding the input , therefore number of classes should be last element of num_neurons\r\n",
         "    # activation_function is just the activation function s.t h_i = activation_function(a_i)\r\n",
         "    # weights is a list of m*n where n is number of neurons in previous layer and m is number of neurons in current layer assume 1 based indexing \r\n",
         "    # assuming output function O is softmax function\r\n",
@@ -275,7 +274,8 @@
         "    \r\n",
         "    #I will add checks for the num_neurons\r\n",
         "    for i in range(num_hidden_layers):\r\n",
-        "       \r\n",
+        "       if(i == 0):\r\n",
+        "         continue\r\n",
         "       # a_i = W_ih_(i-1) + b_i\r\n",
         "       a.append(np.matmul(weights[i],h[i-1])+biases[i])\r\n",
         "       h.append(activation_function(a[len(a)-1])\r\n",
@@ -310,7 +310,7 @@
         "    delta_B.append(A)\r\n",
         "    l = l-1\r\n",
         "    while(l >= 1):\r\n",
-        "      \r\n",
+        "\r\n",
         "       H = np.matmul(weights[l+1].T,A)\r\n",
         "       A = H*(act_fn_derivative(a[l]))     # assuming a is 1 based index \r\n",
         "       delta_W.append(np.matmul(A,h[l-1].T))\r\n",
@@ -327,6 +327,23 @@
         "    \r\n",
         "    \r\n",
         "    #do the weights Initialisation here based on weight_initialisation,num_hidden_layers,sz_each_hidden_layer\r\n",
+        "    num_classes = len(np.unique(Y))\r\n",
+        "\r\n",
+        "    i = len(X[0].flatten())\r\n",
+        "\r\n",
+        "    weights = []\r\n",
+        "    biases =  []\r\n",
+        "\r\n",
+        "    for j in range(num_hidden_layers-1):\r\n",
+        "        \r\n",
+        "        \r\n",
+        "\r\n",
+        "        i = j\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
         "\r\n",
         "\r\n",
         "    if(optimizer == 'sgd'):\r\n",
