--- a/Assignement1.ipynb
+++ b/Assignement1.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignement1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPwHJsFIIDL4/WLSuqrdHDC",
+      "authorship_tag": "ABX9TyO1ZzS7oBk2Tgc/76KOBdtg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -289,7 +289,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KuklB5S78jQy"
+        "id": "IbZQU9bCsCJi"
       },
       "source": [
         "def caluculate_gradients(y_true,y_out,h,a,weights,act_fn_derivative):\r\n",
@@ -321,48 +321,116 @@
         "    delta_B.reverse()\r\n",
         "    return [delta_W,delta_B]\r\n",
         "\r\n",
+        "    \r\n",
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_wyYkWzOyyOT"
+      },
+      "source": [
+        "def upd_lst(lst1,lst2,operation,eeta):\r\n",
+        "   l = []\r\n",
         "\r\n",
+        "   for (x,y) in zip(lst1,lst2):\r\n",
+        "     if(operation == '+'):\r\n",
+        "       l.append(x+(eeta*y))\r\n",
+        "     else:\r\n",
+        "       l.append(x-(eeta*y))\r\n",
         "\r\n",
+        "   return l"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WP-FV-Ijsclo"
+      },
+      "source": [
+        "def sgd(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative):\r\n",
+        "\r\n",
+        "     for i in range(num_epochs): \r\n",
+        "          cnt = 0\r\n",
+        "          cum_W = []\r\n",
+        "          cum_B = []\r\n",
+        "          for j in range(X.shape[0]):\r\n",
+        "\r\n",
+        "             cnt = cnt + 1\r\n",
+        "             r = feed_forward(X[j],activation_function,weights,biases)\r\n",
+        "             a = r[0]\r\n",
+        "             h = r[1]\r\n",
+        "             yout = r[2]\r\n",
+        "             gradients = caluculate_gradients(Y[j],yout,h,a,weights)\r\n",
+        "             cum_W = upd_lst(cum_W,gradients[0],'+',1)\r\n",
+        "             cum_B = upd_lst(cum_B,gradients[1],'+',1)\r\n",
+        "             if(cnt == batch_size): \r\n",
+        "                weights = upd_lst(weights,cum_W,'-',(learning_rate*(1-weight_decay))/batch_size)\r\n",
+        "                biases = upd_lst(biases,cum_B,'-',(learning_rate*(1-weight_decay))/batch_size)\r\n",
+        "                cum_W = []\r\n",
+        "                cum_B = []\r\n",
+        "                cnt = 0\r\n",
+        "      \r\n",
+        "      return [weights,biases]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KuklB5S78jQy"
+      },
+      "source": [
         "def backpropagation(X,Y,num_epochs,num_hidden_layers,sz_hidden_layer,weight_decay,learning_rate,optimizer,batch_size,weight_initialisation,activation_function):\r\n",
         "    \r\n",
         "    \r\n",
         "    #do the weights Initialisation here based on weight_initialisation,num_hidden_layers,sz_each_hidden_layer\r\n",
-        "    num_classes = len(np.unique(Y))\r\n",
+        "    \r\n",
+        "    weights = [0]  #dummy value\r\n",
+        "    biases =  [0]  #dummy value\r\n",
         "\r\n",
-        "    i = len(X[0].flatten())\r\n",
+        "    if(weight_initialisation == 'random'):\r\n",
+        "          \r\n",
+        "          num_classes = len(np.unique(Y))\r\n",
+        "          i = len(X[0].flatten())\r\n",
+        "          a = -100\r\n",
+        "          b = 100\r\n",
         "\r\n",
-        "    weights = []\r\n",
-        "    biases =  []\r\n",
+        "          for j in range(num_hidden_layers-1):\r\n",
+        "              weights.append((200)*np.random.rand(sz_hidden_layer,i)-100)\r\n",
+        "              biases.append((200)*np.random.rand(sz_hidden_layer)-100)\r\n",
+        "              i = sz_hidden_layer\r\n",
         "\r\n",
-        "    for j in range(num_hidden_layers-1):\r\n",
+        "          weights.append((200)*np.random.rand(num_classes,i)-100)\r\n",
+        "          biases.append((200)*np.random.rand(num_classess)-100)\r\n",
+        "          \r\n",
+        "     else:\r\n",
+        "         print(\"Please Implement Xavier haha !!\")  \r\n",
         "        \r\n",
-        "        \r\n",
-        "\r\n",
-        "        i = j\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
         "\r\n",
         "    if(optimizer == 'sgd'):\r\n",
-        "       return sgd(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
+        "       return sgd(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative)\r\n",
         "      \r\n",
         "    if(optimizer == 'momentum'): \r\n",
-        "       return momentum(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
+        "       return momentum(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative)\r\n",
         "\r\n",
         "    if(optimizer == 'nesterov'): \r\n",
-        "       return nesterov(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
+        "       return nesterov(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative)\r\n",
         "\r\n",
         "    if(optimizer == 'rmsprop'):\r\n",
-        "       return rmsprop(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
+        "       return rmsprop(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative)\r\n",
         "\r\n",
         "    if(optimizer == 'adam'):\r\n",
-        "      return adam(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
+        "      return adam(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative)\r\n",
         "\r\n",
         "    if(optimizer == 'nadam'):\r\n",
-        "      return nadam(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function)\r\n",
+        "      return nadam(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative)\r\n",
         "  \r\n"
       ],
       "execution_count": null,
@@ -371,7 +439,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1gsjii9ICVT3"
+        "id": "1gsjii9ICVT3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "32ded10c-3ca3-4d90-9d50-5e96f4902b51"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 1, 2, 3]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gDmQzYnqwokO"
       },
       "source": [
         ""
